# meowfi_agent_monad

./: README.md  pyproject.toml  requirements.txt
src/meowfi/: app.py  constants.py  crew.py  main.py  utils.py
src/meowfi/config/: tasks.yaml
src/meowfi/tools/: custom_tool.py
