[project]
name = "meowfi"
version = "0.1.0"
description = "meowfi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
meowfi = "meowfi.main:run"
run_crew = "meowfi.main:run"
train = "meowfi.main:train"
replay = "meowfi.main:replay"
test = "meowfi.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
